--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>P1 - Service Worker</title>
+    <title>P2 - Service Worker</title>
 </head>
 <body>
     <h1>Ejemplo de un Service Worker - P1</h1>
     <p>Este es un ejemplo de un ejemplo de como entender como funcionan los service workers.</p>
-    
+    <p>Se ha agregado una notificacion Push</p>
     <nav class="navbar navbar-default navbar-static-top" role="navigation">
        
         <ul class="nav navbar-nav">
