Actualizacion a la PWA

--- a/articulo.html
+++ b/articulo.html
@@ -13,11 +13,14 @@
     <nav>
       <a href="index.html">Inicio</a>
     </nav>
-    <div class="container">
-      <div id="lista-articulos" class="article-container"></div>
+    <div class="full-post-div">
+        <div class="post-body-div">
+      <h1 id="titulo-articulo" style="text-align: center;"></h1>
+      <div id="contenido-articulo"></div>
     </div>
+</div>
     <script src="articulos.js"></script>
-    <script src="main.js"></script>
+    <script src="articulo.js"></script>
     <footer>
       <p>
         Derechos de autor © 2023 Javier Cervantes Carmona - 20307029. Todos los
