--- a/articulo_1.html
+++ b/articulo_1.html
@@ -12,15 +12,18 @@
     </header>
     <nav>
       <a href="index.html">Inicio</a>
+      <a href="articulo_1.html">Articulo 1</a>
+      <a href="articulo_2.html">Articulo 2</a>
     </nav>
     <div class="full-post-div">
         <div class="post-body-div">
       <h1 id="titulo-articulo" style="text-align: center;"></h1>
       <div id="contenido-articulo"></div>
     </div>
-</div>
+</div> <script src="main.js"></script>
     <script src="articulos.js"></script>
-    <script src="articulo.js"></script>
+    <script src="articulo.js"></script>    
+   
     <footer>
       <p>
         Derechos de autor © 2023 Javier Cervantes Carmona - 20307029. Todos los
