--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     </header>
     <nav>
       <a href="index.html">Inicio</a>
+      <a href="articulo_1.html">Articulo 1</a>
+      <a href="articulo_2.html">Articulo 2</a>
     </nav>
     <div class="container">
       <div id="lista-articulos" class="article-container"></div>
